update footer button shadow; try to fix header overflow

--- a/src/sass/_background.scss
+++ b/src/sass/_background.scss
@@ -1,4 +1,5 @@
 .background {
+  overflow-x: hidden;
   &::before {
     content: "";
     position: absolute;
