--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -132,7 +132,7 @@
         overflow: hidden;
         letter-spacing: 0.5px;
         transition: all 0.3s ease-in-out;
-        box-shadow: 8px 5px 15px -3px hsla(220, 16%, 25%, 0.7);
+        box-shadow: 0px 7px 15px 0px hsl(231, 11.9%, 33%);
 
         &:active {
           transform: translateY(2px);
